kubernetes/deployment.yaml
# Update <REGISTRY> <NAMESPACE> values before use
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-java-app
  labels:
    app.kubernetes.io/name: sample-java-app
    helm.sh/chart: sample-java-app-1.0.0-rc0.0.2
    app.kubernetes.io/instance: sample-java-app
    app: sample-java-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: sample-java-app
      app.kubernetes.io/instance: sample-java-app
  template:
    metadata:
      labels:
        app.kubernetes.io/name: sample-java-app
        app.kubernetes.io/instance: sample-java-app
    spec:
      serviceAccountName: sample-java-app
      volumes:
      containers:
        - name: sample-java-app
          image: "replace"
          imagePullPolicy: IfNotPresent
          volumeMounts:
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
              scheme: HTTP
            timeoutSeconds: 10
            periodSeconds: 30
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
              scheme: HTTP
            timeoutSeconds: 10
            periodSeconds: 30
            successThreshold: 1
            failureThreshold: 3
