kubernetes/service.yaml
---
# Source: tp-sample-app/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-java-app
  labels:
    app.kubernetes.io/name: sample-java-app
    helm.sh/chart: sample-java-app-1.0.0-rc0.0.24
    app.kubernetes.io/instance: sample-java-app
    app: sample-java-app
spec:
  type: ClusterIP #clusterip
  ports:
    - port: 9080
      targetPort: 9080
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: sample-java-app
    app.kubernetes.io/instance: sample-java-app
