kubernetes/route.yaml
---
# Source: tp-sample-app/templates/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name:  sample-java-app
  namespace: dev
  annotations:
    argocd.argoproj.io/sync-options: Validate=false
spec:
  to:
    kind: Service
    name:  sample-java-app
    weight: 100
  tls:
    termination: edge
  wildcardPolicy: None
